# New_Soundz

./: .gitignore  01_explore_streams.ipynb  CLAUDE.md  DEPLOY.md  Follow.json  Identifiers.json  Identity.json  Inferences.json  Marquee.json  MessageData.json  Payments.json  Playlist1.json  README (5).md  README.md  SearchQueries.json  StreamingHistory_music_0.json  StreamingHistory_music_1.json  StreamingHistory_music_10.json  StreamingHistory_music_2.json  StreamingHistory_music_3.json  StreamingHistory_music_4.json  StreamingHistory_music_5.json  StreamingHistory_music_6.json  StreamingHistory_music_7.json  StreamingHistory_music_8.json  StreamingHistory_music_9.json  StreamingHistory_podcast_0.json  UserAddress.json  UserPrompts.json  Userdata.json  Wrapped2024.json  YourLibrary.json  YourSoundCapsule.json  final-project-steps.md  loader.py  pyproject.toml
.streamlit/: config.toml
app/: main.py
app/pages/: 1_Privacy_Policy.py  2_Terms_of_Service.py
data/processed/: artist_cache.sqlite  hf_artist_genres.parquet
notebooks/: 00_project_writeup.ipynb  01_explore_streams.ipynb  02_explore_recommender.ipynb
notebooks/data/processed/: artist_cache.sqlite
reports/: project-summary.md
src/spotify_recs/: align.py  cache.py  content_scorer.py  genre_buckets.py  get_demo_refresh_token.py  hf_genres.py  lastfm_api.py  loader.py  recommender.py  routing.py  run_demo.py  spotify_auth.py
