[project]
name = "spotify-recs"
version = "0.1.0"
description = "Personal Spotify analytics + recommendation engine"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Data
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    # Recommender
    "lenskit>=2025.3",
    # Spotify API (day 4)
    "spotipy>=2.24",
    "python-dotenv>=1.0",
    # Fuzzy matching for artist alignment (day 2)
    "rapidfuzz>=3.9",
    # Viz
    "plotly>=5.22",
    "altair>=5.3",
    # App (day 5)
    "streamlit>=1.36",
    # Notebook
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_recs"]
